--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,12 +1,3 @@
 plugins:
-  tagging_enabled:
+  remote_sso_enabled:
     default: false
-  max_tags_per_topic:
-    default: 5
-    client: true
-  max_tag_length:
-    default: 20
-    client: true
-  min_trust_to_create_tag:
-    default: 3
-    enum: 'TrustLevelSetting'
